--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:R3peat"
         mc:Ignorable="d"
-        Title="Action Editor" Height="450" Width="800" Background="#FFE2E2E2">
+        Title="Macro Editor" Height="450" Width="800" Background="#FFE2E2E2">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -22,8 +22,32 @@
                 <RowDefinition Height="26"/>
                 <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
-            <ListBox x:Name="ActionList" Grid.Column="0" Grid.Row="1" d:ItemsSource="{d:SampleData ItemCount=5}" />
-            <Label Grid.Row="0" Content="Action List" HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Center"/>
+            <ListBox x:Name="ActionList" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Stretch" d:ItemsSource="{d:SampleData ItemCount=5}"  />
+            <Label Grid.Row="0" Content="Action List" Margin="0,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Center" />
+        </Grid>
+        <Grid Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="1" Margin="0,0,0,0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="26"/>
+                <RowDefinition Height="1*"/>
+            </Grid.RowDefinitions>
+            <Label Grid.Row="0" Content="Action Editor" HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Center"/>
+        </Grid>
+        <Grid Grid.Column="2" Grid.Row="1" Grid.ColumnSpan="1" Margin="0,0,0,0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="26"/>
+                <RowDefinition Height="1*"/>
+            </Grid.RowDefinitions>
+            <Label Grid.Row="0" Content="Action Editor" HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Center"/>
+        </Grid>
+        <Grid Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="22"/>
+                <ColumnDefinition Width="22"/>
+                <ColumnDefinition Width="4"/>
+            </Grid.ColumnDefinitions>
+            <Button Grid.Column="1" Content="-" HorizontalAlignment="right" Margin="0,0,0,0" VerticalAlignment="Top" Height="20" Width="20"/>
+            <Button Grid.Column="2" Content="+" HorizontalAlignment="right" Margin="0,0,0,0" VerticalAlignment="Top" Height="20" Width="20" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
         </Grid>
     </Grid>
 </Window>
