--- a/MacroEditorWindow.xaml
+++ b/MacroEditorWindow.xaml
@@ -1,11 +1,13 @@
-﻿<Window x:Class="R3peat.Window1"
+﻿<Window x:Class="R3peat.MacroEditorWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:R3peat"
         mc:Ignorable="d"
-        Title="Window1" Height="450" Width="800">
+        Title="Window1" Height="450" Width="800"
+        xmlns:ui="http://schemas.modernwpf.com/2019"
+        ui:WindowHelper.UseModernWindowStyle="True">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -13,9 +15,9 @@
         </Grid.ColumnDefinitions>
         <Grid Grid.Column="0">
             <Grid.RowDefinitions>
-                <RowDefinition Height="30"/>
+                <RowDefinition Height="35"/>
                 <RowDefinition Height="*"/>
-                <RowDefinition Height="30"/>
+                <RowDefinition Height="35"/>
             </Grid.RowDefinitions>
             <ListBox x:Name="ActionList" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Stretch" d:ItemsSource="{d:SampleData ItemCount=5}" SelectionChanged="OnActionListSelectionChange" >
                 <ListBox.ItemTemplate>
@@ -30,6 +32,18 @@
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
+            <Grid Grid.Row="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="5*"/>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <ComboBox Name="NewActionTypeComboBox" Grid.Column="0" Grid.Row="2"  HorizontalAlignment="Stretch" VerticalAlignment="Center" />
+                <Button Click="AddNewAction" Grid.Column="1" Content="Add" HorizontalAlignment="Left" FontWeight="Bold" Margin="0,0,0,0" VerticalAlignment="Stretch"   />
+                <Button Click="ChangeActionOrderLater" Grid.Column="2" Content="▼" FontSize="14" Margin="0,0,0,0" VerticalAlignment="Stretch"  HorizontalAlignment="Stretch" />
+                <Button Click="ChangeActionOrderSooner" Grid.Column="3" Content="▲" FontSize="14"  HorizontalAlignment="Stretch" Margin="0,0,0,0" VerticalAlignment="Stretch" />
+            </Grid>
         </Grid>
     </Grid>
 </Window>
