--- a/App.xaml
+++ b/App.xaml
@@ -3,12 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:R3peat"
              xmlns:ui="http://schemas.modernwpf.com/2019"
-             StartupUri="Window1.xaml">
+             StartupUri="MacroEditorWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ui:ThemeResources />
                 <ui:XamlControlsResources />
+                <ui:IntellisenseResources/>
+                <ui:ResourceDictionaryEx/>
+
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
