--- a/MacroEditorWindow.xaml
+++ b/MacroEditorWindow.xaml
@@ -10,7 +10,7 @@
         ui:WindowHelper.UseModernWindowStyle="True">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*" MinWidth="265"/>
             <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
         <Grid Grid.Column="0">
@@ -34,13 +34,13 @@
             </ListBox>
             <Grid Grid.Row="2">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="5*"/>
+                    <ColumnDefinition Width="11*"/>
+                    <ColumnDefinition Width="3*"/>
                     <ColumnDefinition Width="2*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="2*"/>
                 </Grid.ColumnDefinitions>
                 <ComboBox Name="NewActionTypeComboBox" Grid.Column="0" Grid.Row="2"  HorizontalAlignment="Stretch" VerticalAlignment="Center" />
-                <Button Click="AddNewAction" Grid.Column="1" Content="Add" HorizontalAlignment="Left" FontWeight="Bold" Margin="0,0,0,0" VerticalAlignment="Stretch"   />
+                <Button Click="AddNewAction" Grid.Column="1" Content="Add" HorizontalAlignment="Stretch" FontWeight="DemiBold" Margin="0,0,0,0" VerticalAlignment="Stretch"   />
                 <Button Click="ChangeActionOrderLater" Grid.Column="2" Content="▼" FontSize="14" Margin="0,0,0,0" VerticalAlignment="Stretch"  HorizontalAlignment="Stretch" />
                 <Button Click="ChangeActionOrderSooner" Grid.Column="3" Content="▲" FontSize="14"  HorizontalAlignment="Stretch" Margin="0,0,0,0" VerticalAlignment="Stretch" />
             </Grid>
