--- a/MacroEditorWindow.xaml
+++ b/MacroEditorWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:R3peat"
         mc:Ignorable="d"
-        Title="Macro Editor" Height="450" Width="800"
+        Title="Macro Editor" Height="450" Width="800" MinWidth="800" MinHeight="450"
         xmlns:ui="http://schemas.modernwpf.com/2019"
         ui:WindowHelper.UseModernWindowStyle="True">
     <Grid>
@@ -46,6 +46,8 @@
                 <Button Click="ChangeActionOrderSooner" Grid.Column="3" Content="▲" FontSize="14"  HorizontalAlignment="Stretch" Margin="0,0,0,0" VerticalAlignment="Stretch" />
             </Grid>
         </Grid>
+        
+        
         <Grid Name="PauseEditorGrid" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" Visibility="Hidden" >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
@@ -70,7 +72,8 @@
                 </Grid.RowDefinitions>
             </Grid>
             <Label Content="Duration:" HorizontalAlignment="Right" Margin="0,0,10,0" Grid.Row="2" VerticalAlignment="Center"/>
-            <TextBox Name="PauseDurationTextBox" Grid.Column="1" HorizontalAlignment="Stretch" Margin="0,0,0,0" Grid.Row="2" TextWrapping="Wrap" Text="" VerticalAlignment="Center" />
+            <ui:NumberBox Name="PauseDurationTextBox" Grid.Column="1" HorizontalAlignment="Stretch" Margin="0,0,0,0" Grid.Row="2" VerticalAlignment="Center" />
+            <Label Content="ms" HorizontalAlignment="Left" Margin="0,0,0,0" Grid.Row="2" Grid.Column="2" VerticalAlignment="Center"/>
         </Grid>
         
         
@@ -122,17 +125,48 @@
                 <Button Click="ChangeMouseMovementStepOrderLater" Grid.Column="1" Content="▼" FontSize="14" Margin="0,0,0,0" VerticalAlignment="Stretch"  HorizontalAlignment="Stretch" />
                 <Button Click="ChangeMouseMovementStepOrderSooner" Grid.Column="2" Content="▲" FontSize="14"  HorizontalAlignment="Stretch" Margin="0,0,0,0" VerticalAlignment="Stretch" />
             </Grid>
-            <Grid Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2">
+            <Grid Name="MouseMovementStepEditorGrid" Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2" Grid.RowSpan="2">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width=".85*"/>
+                    <ColumnDefinition Width="1.5*"/>
+                    <ColumnDefinition Width="1.25*"/>
+                    <ColumnDefinition Width="1.5*"/>
+                    <ColumnDefinition Width="20"/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                
+                <Label Content="Name: " HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                <Label Content="Pixel X: " HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="1"/>
+                <Label Content="Pixel Y: " HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="2"/>
+                <Label Content="Absolute X: " HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Column="2" Grid.Row="1"/>
+                <Label Content="Absolute Y: " HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="2" Grid.Column="2"/>
+                <TextBox TextWrapping="NoWrap" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Center" Grid.ColumnSpan="3"/>
+                <ui:NumberBox Name="MouseMovementStepPixelXNumberBox" HorizontalAlignment="Stretch" VerticalAlignment="Center" Grid.Column="1" Grid.Row="1"/>
+                <ui:NumberBox Name="MouseMovementStepPixelYNumberBox" HorizontalAlignment="Stretch" VerticalAlignment="Center" Grid.Column="1" Grid.Row="2"/>
+                <ui:NumberBox Name="MouseMovementStepAbsoluteXNumberBox" HorizontalAlignment="Stretch" VerticalAlignment="Center" Grid.Column="3" Grid.Row="1"/>
+                <ui:NumberBox Name="MouseMovementStepAbsoluteYNumberBox" HorizontalAlignment="Stretch" VerticalAlignment="Center" Grid.Column="3" Grid.Row="2"/>
+                <Grid Grid.Row="3" Grid.ColumnSpan="5" Grid.RowSpan="2">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1.5*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="22"/>
+                        <ColumnDefinition Width="20"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <Label Content="Subsequent Pause Duration: " VerticalAlignment="Center" HorizontalAlignment="Right"/>
+                    <Label Content="Pixel Variance: " VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Row="1"/>
+                    <ui:NumberBox Name="MouseMovementStepPauseDurationNumberBox" VerticalAlignment="Center" HorizontalAlignment="Stretch" Grid.Column="1"/>
+                    <ui:NumberBox Name="MouseMovementStepPixelVarianceNumberBox" VerticalAlignment="Center" HorizontalAlignment="Stretch" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2"/>
+                    <Label Content="ms" VerticalAlignment="Center" HorizontalAlignment="Left" Grid.Column="2" Margin="2,0,0,0"/>
+                </Grid>
             </Grid>
         </Grid>
     </Grid>
