Added Functionality to the Pause Name box

--- a/MacroEditorWindow.xaml
+++ b/MacroEditorWindow.xaml
@@ -61,7 +61,8 @@
             <Grid Grid.Row="1" Grid.ColumnSpan="4">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="4*"/>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="2*"/>
                     <ColumnDefinition Width=".5*"/>
                     <ColumnDefinition Width="20"/>
                 </Grid.ColumnDefinitions>
@@ -71,9 +72,9 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
                 <Label Grid.Row="0" Content="Pause Name: " HorizontalAlignment="Right" VerticalAlignment="Center" />
-                <TextBox Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Stretch" Grid.ColumnSpan="2"/>
+                <TextBox Name="PauseNameTextBox" Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Stretch" Grid.ColumnSpan="2" TextChanged="PauseNameChanged"/>
                 <Label Content="Duration:" HorizontalAlignment="Right" Margin="0,0,10,0" Grid.Row="1" VerticalAlignment="Center"/>
-                <ui:NumberBox Name="PauseDurationTextBox" Grid.Column="1" HorizontalAlignment="Stretch" Margin="0,0,0,0" Grid.Row="1" VerticalAlignment="Center" Grid.ColumnSpan="1"/>
+                <ui:NumberBox Name="PauseDurationTextBox" Grid.Column="1" HorizontalAlignment="Stretch" Margin="0,0,0,0" Grid.Row="1" VerticalAlignment="Center" Grid.ColumnSpan="1" TextAlignment="Right"/>
                 <Label Content="ms" HorizontalAlignment="Left" Margin="2,0,0,0" Grid.Row="1" Grid.Column="2" VerticalAlignment="Center"/>
             </Grid>
 
