--- a/App.xaml
+++ b/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:R3peat"
              xmlns:ui="http://schemas.modernwpf.com/2019"
-             StartupUri="MainWindow.xaml">
+             StartupUri="MacroEditorWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
